# give-books

./: .gitignore  Cargo.toml  Dioxus.toml
doc/: design.md  er.html  er.md
docs/: 404.html  index.html  main.css  test.json
docs/assets/dioxus/: give-books.js  give-books_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
src/: components.rs  consts.rs  main.rs  structs.rs  utils.rs
