[package]
name = "give-books"
version = "0.1.0"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web","router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
reqwest = { version = "0.12.5", features = ["json"] }
scraper = "0.19.0"
serde = "1.0.203"
serde_json = "1.0.118"
manganis = "0.2.2"
getrandom = { version = "0.2.15", features = ["js"] }
surrealdb = { version = "1.5.3", features = ["http", "protocol-http"] }
